Bug 247513 - After offline Mode, stretched tiles are kept in cache
Summary: After offline Mode, stretched tiles are kept in cache
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Bastian Senst
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-12 14:45 UTC by Robin Knapp
Modified: 2012-02-04 14:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robin Knapp 2010-08-12 14:45:37 UTC
Version:           unspecified (using KDE 4.5.0) 
OS:                Linux

Marble has become totally awesome, but I just found a bug:

Using OpenStreetMap in Offline Mode creates streched tiles of the map. Zooming in make look them really ugly.
As this is expected in offline mode, returning to online mode should re-load missing tiles even if there are stretched versions.

Reproducible: Didn't try

Steps to Reproduce:
- Select OSM Layer
- Select Offline Mode
- Zoom in and have fun with huge pixels (expected)
- Deselect Offline Mode
- Still have (not so much) fun with huge pixels
- Move and zoom around - pixels will stay huge in that specific zoom level. Zooming in further will again load tiles, but zooming out again shows the cached huge pixels
Comment 1 Dennis Nienhüser 2010-08-12 15:41:51 UTC
Yes, this is true and indeed a bug.
Comment 2 Thibaut Gridel 2012-02-04 14:23:09 UTC
Git commit 279f50d714d957c781a9c32145e7dd505a098159 by Thibaut Gridel.
Committed on 04/02/2012 at 15:21.
Pushed by tgridel into branch 'master'.

MarbleControlBox: clear Map tile cache when exiting offline mode

M  +3    -0    src/lib/MarbleControlBox.cpp

http://commits.kde.org/marble/279f50d714d957c781a9c32145e7dd505a098159