MarbleControlBox: clear Map tile cache when exiting offline mode

BUG: 247513